[package]
name = "easypam"
version = "0.1.1"
edition = "2024"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
description = "Rust interface for PAM (Linux)"
repository = "https://github.com/eva-ics/easypam"
keywords = ["pam", "authentication", "linux", "security"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[dependencies]
libc = "0.2.180"
libloading = "0.9"
oneshot = "0.1.13"
rtsc = "0.4.4"
thiserror = "2"
tokio = { version = "1.48", features = ["time"], optional = true }
tracing = { version = "0.1" }

[features]
default = []
async = ["tokio"]
full = ["async"]
